--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "@notionhq/client": "^2.2.15",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
